--- a/calculadoraUNET/index.html
+++ b/calculadoraUNET/index.html
@@ -5,7 +5,7 @@
 	<title>Calculadora de notas</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scalable=1.0, maximum-scale=1.0, minimum-scale=1.0 ">
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
