--- a/calculadoraUNET/index.html
+++ b/calculadoraUNET/index.html
@@ -5,8 +5,9 @@
 	<title>Calculadora de notas</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scalable=1.0, maximum-scale=1.0, minimum-scale=1.0 ">
-	<link rel="stylesheet" type="text/css" href="bootstrap.css">
-	<script src="js/jquery.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="../bootstrap4.1/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<script src="../bootstrap4.1/js/jquery3.3.1.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
@@ -14,21 +15,26 @@
 
 <body>
 
-	<h1 class="text-center">Calculadora de notas UNET</h1>
-	
 	<div class="container" id="a">
-
-			<div class="form-group acomodar">
-				<label id="label1">Número de parciales:</label>
-				<select class="form-control" id="seleccion">
-					<option>1</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
-				</select>
+		<h1 class="text-center">Calculadora de notas UNET</h1>
+			
+		<div class="row row-1">	
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
+				<div class="form-group">
+					<label id="label1">Número de parciales:</label>
+					<select class="form-control" id="seleccion">
+						<option>1</option>
+						<option>2</option>
+						<option>3</option>
+						<option>4</option>
+					</select>
+				</div>
 			</div>
-		
-			<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Aceptar">
+
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group">				
+					<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Calcular">
+			</div>
+		</div>
 
 		<div id="flujo">
 			
@@ -36,14 +42,29 @@
 	
 	</div>
 	
-	<script src="bootstrap/js/bootstrap.js"></script>
+	<div class="container" id="container-2">
+		<h1 class="text-center mt-5">Cuanto me falta UNET</h1>
 
-	<style type="text/css">
-		.acomodar {
-			width: 50%;
-			margin-left: 25%;
-		}
-	</style>
+		<div class="row row-1">	
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
+				<div class="form-group">
+					<label id="label1">Número de parciales:</label>
+					<select class="form-control" id="seleccion">
+						<option>1</option>
+						<option>2</option>
+						<option>3</option>
+						<option>4</option>
+					</select>
+				</div>
+			</div>
+
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group">				
+					<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Calcular">
+			</div>
+		</div>
+	</div>
+
+	<script src="bootstrap/js/bootstrap.js"></script>
 
 </body>
 
