--- a/calculadoraUNET/index.html
+++ b/calculadoraUNET/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<script src="../bootstrap4.1/js/jquery3.3.1.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
+	<script type="text/javascript" src="../bootstrap4.1/js/bootstrap.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 </head>
@@ -16,7 +17,7 @@
 <body>
 
 	<div class="container" id="a">
-		<h1 class="text-center">Calculadora de notas UNET</h1>
+		<h1 class="text-center">Calculadora de notas </h1>
 			
 		<div class="row row-1">	
 			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
@@ -43,7 +44,7 @@
 	</div>
 	
 	<div class="container" id="container-2">
-		<h1 class="text-center mt-5">Cuanto me falta UNET</h1>
+		<h1 class="text-center mt-5">Cuanto me falta</h1>
 
 		<div class="row row-1">	
 			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
@@ -62,6 +63,25 @@
 					<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Calcular">
 			</div>
 		</div>
+	</div>
+	
+	<!-- Modal -->
+	<div class="modal fade" id="modal-notes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	        <h3 class="nota-final text-center"></h3>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
 	</div>
 
 	<script src="bootstrap/js/bootstrap.js"></script>
