--- a/calculadoraUNET/index.html
+++ b/calculadoraUNET/index.html
@@ -7,10 +7,14 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scalable=1.0, maximum-scale=1.0, minimum-scale=1.0 ">
 	<link rel="stylesheet" type="text/css" href="../bootstrap4.1/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/flipsidestyle.css">
+	<link rel="stylesheet" type="text/css" href="aos/aos.css">
 	<script src="../bootstrap4.1/js/jquery3.3.1.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
 	<script type="text/javascript" src="../bootstrap4.1/js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/flipside-script.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<script type="text/javascript" src="aos/aos.js"></script>
 
 </head>
 
@@ -20,7 +24,7 @@
 		<h1 class="text-center">Calculadora de notas </h1>
 			
 		<div class="row row-1">	
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10" data-aos="zoom-in">
 				<div class="form-group">
 					<label id="label1">Número de parciales:</label>
 					<select class="form-control" id="seleccion">
@@ -32,8 +36,13 @@
 				</div>
 			</div>
 
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group">				
-					<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Calcular">
+			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group" data-aos="fade-left">				
+					<!-- <input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar efect-1" value="Calcular"> -->
+
+					<div class="btn-flipside">
+						<div class="btn-front-flipside">Delete
+						</div>	
+					</div>
 			</div>
 		</div>
 
@@ -85,7 +94,11 @@
 	</div>
 
 	<script src="bootstrap/js/bootstrap.js"></script>
-
+	<script>
+      AOS.init({
+        easing: 'ease-in-out-sine'
+      });
+    </script>
 </body>
 
 </html>
