--- a/calculadoraUNET/index.html
+++ b/calculadoraUNET/index.html
@@ -12,7 +12,6 @@
 	<script src="../bootstrap4.1/js/jquery3.3.1.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
 	<script type="text/javascript" src="../bootstrap4.1/js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/flipside-script.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<script type="text/javascript" src="aos/aos.js"></script>
 
@@ -21,79 +20,38 @@
 <body>
 
 	<div class="container" id="a">
-		<h1 class="text-center">Calculadora de notas </h1>
+		<h1 class="text-center titulo-1">Calculadora de notas</h1>
 			
 		<div class="row row-1">	
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10" data-aos="zoom-in">
-				<div class="form-group">
-					<label id="label1">Número de parciales:</label>
-					<select class="form-control" id="seleccion">
-						<option>1</option>
-						<option>2</option>
-						<option>3</option>
-						<option>4</option>
-					</select>
-				</div>
-			</div>
 
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group" data-aos="fade-left">				
-					<!-- <input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar efect-1" value="Calcular"> -->
-
-					<div class="btn-flipside">
-						<div class="btn-front-flipside">Delete
-						</div>	
-					</div>
-			</div>
-		</div>
-
-		<div id="flujo">
-			
 		</div>
 	
 	</div>
 	
 	<div class="container" id="container-2">
-		<h1 class="text-center mt-5">Cuanto me falta</h1>
-
-		<div class="row row-1">	
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10">
-				<div class="form-group">
-					<label id="label1">Número de parciales:</label>
-					<select class="form-control" id="seleccion">
-						<option>1</option>
-						<option>2</option>
-						<option>3</option>
-						<option>4</option>
-					</select>
-				</div>
-			</div>
-
-			<div class="col-xl-4 col-md-6 col-sm-6 col-10 acomodar form-group">				
-					<input type="button" id="botonaceptar" name="boton" onclick="aceptar()" class="btn btn-primary form-control acomodar" value="Calcular">
-			</div>
-		</div>
+	
 	</div>
 	
 	<!-- Modal -->
 	<div class="modal fade" id="modal-notes" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
+	        	<span aria-hidden="true">&times;</span>
 	        </button>
 	      </div>
 	      <div class="modal-body">
 	        <h3 class="nota-final text-center"></h3>
 	      </div>
 	      <div class="modal-footer">
-	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="button" class="hover-person btn btn-secondary" data-dismiss="modal">Close</button>
 	      </div>
 	    </div>
 	  </div>
 	</div>
 
-	<script src="bootstrap/js/bootstrap.js"></script>
 	<script>
       AOS.init({
         easing: 'ease-in-out-sine'
