--- a/proyectos/calculadoraunet/index.html
+++ b/proyectos/calculadoraunet/index.html
@@ -28,7 +28,7 @@
 	        	</button>
 	     	</div>
 	        <div class="modal-body">
-	        	<h3 class="nota-final text-center"></h3>
+	        	<h3 id="nota-final" class="text-center"></h3>
 	      	</div>
 			<div class="modal-footer">
 				<button type="button" class="hover-person btn btn-secondary" data-dismiss="modal">Close</button>
